--- a/HiDoctorApp/Views/TP/TPUploadViewController.storyboard
+++ b/HiDoctorApp/Views/TP/TPUploadViewController.storyboard
@@ -191,17 +191,17 @@
                                                                                 <constraint firstAttribute="height" constant="14" id="ECq-fR-6xW"/>
                                                                             </constraints>
                                                                             <fontDescription key="fontDescription" name="SFUIText-Semibold" family="SF UI Text" pointSize="14"/>
-                                                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                                            <color key="textColor" systemColor="tertiarySystemBackgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                             <nil key="highlightedColor"/>
                                                                         </label>
                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZKx-3A-VyL">
                                                                             <rect key="frame" x="20" y="25" width="224" height="22"/>
                                                                             <fontDescription key="fontDescription" name="SFUIText-Regular" family="SF UI Text" pointSize="15"/>
-                                                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                                            <color key="textColor" systemColor="tertiarySystemBackgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                             <nil key="highlightedColor"/>
                                                                         </label>
                                                                     </subviews>
-                                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                                    <color key="backgroundColor" red="0.2470588235" green="0.31764705879999999" blue="0.70980392160000005" alpha="1" colorSpace="calibratedRGB"/>
                                                                     <constraints>
                                                                         <constraint firstItem="ZKx-3A-VyL" firstAttribute="top" secondItem="Q8d-UI-n8F" secondAttribute="bottom" constant="3" id="0eM-ww-5Sm"/>
                                                                         <constraint firstItem="Q8d-UI-n8F" firstAttribute="top" secondItem="NyG-ig-RFs" secondAttribute="top" constant="8" id="8ZD-Ay-oLc"/>
